--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
-    "mongoose": "^4.4.15"
+    "mongoose": "^4.4.15",
+    "multer": "^1.3.0",
+    "pg": "^6.1.5",
+    "q": "^1.4.1"
   },
   "devDependencies": {},
   "scripts": {
